# RustTensor

./: .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: rust.yml
benches/: tensor_ops_bench.rs
docs/: ARCHITECTURE.md  PERFORMANCE.md  USER_GUIDE.md
examples/: cuda_serialization.rs  lstm_char_rnn_cpu.rs  sine_regression_cpu.rs  tensor_serialization.rs  train_mnist_cnn_cpu.rs  train_mnist_cnn_gpu.rs  train_mnist_cpu.rs  train_mnist_gpu.rs
scripts/: profile.sh  profile_basic.sh  profile_cpu.sh  profile_gpu.sh
src/: array.rs  data.rs  error.rs  graph.rs  hooks.rs  init.rs  lib.rs  optim.rs  tensor.rs  tensor_debug_impl.rs  test_utils.rs  util.rs
src/backend/: cpu.rs  mod.rs
src/backend/cuda/: context.rs  mod.rs  ops.rs  ops.rs.backup  storage.rs  utils.rs
src/backend/cuda/kernels/: array_ops.cu  conv.cu  elementwise.cu  log_softmax_fused.cu  logsumexp_backward.cu  mod.rs  optimizer.cu  pooling.cu  reduction.cu  reduction_helpers.cuh  transpose.cu
src/ops/: cpu_backward.rs  cpu_ops.rs  mod.rs
tests/: array_tensor_tests.rs  hooks_tests.rs  init_tests.rs  mod.rs  ops_cpu_backward_tests.rs  ops_cpu_tests.rs  ops_cuda_backward_tests.rs  ops_cuda_backward_tests_backup.rs  ops_cuda_tests.rs  ops_edge_cases_tests.rs  ops_overloading_tests.rs  optim_tests.rs  random_ops_tests.rs  serialization_tests.rs  sgd_cuda_tests.rs  tensor_method_cuda_tests_map.rs  tensor_method_tests.rs  tensor_method_tests_map.rs  test_concat.rs  test_cuda_conv2d.rs  test_cuda_logsumexp_gradient.rs  test_cuda_sum_along_axis.rs  test_expand_dims.rs  test_gradient_checker.rs  test_gradient_checker_cuda.rs
